@@ -35,6 +35,9 @@ Display help and exit.
 .B \-\-version
 Display version information and exit.
 .TP
+.B \-\-no-daemon
+Don't daemonize mpdscribble, run it in foreground.
+.TP
 .B \-\-pidfile FILE
 Write the process id to this file.
 .TP
