@@ -20,9 +20,14 @@
 #ifndef FILE_H
 #define FILE_H
 
+#include <glib.h>
+
 enum file_location { file_etc, file_home, file_unknown, };
 
 struct config {
+	/** don't daemonize the mpdscribble process */
+	gboolean no_daemon;
+
 	char *pidfile;
 
 	char *username;
