@@ -2,6 +2,7 @@ mpdscribble 0.16 - not yet released
   * support repeating a song
   * fix MPD 0.13 support (without "idle")
   * added pidfile support
+  * daemonize mpdscribble by default, added option --no-daemon
 
 
 mpdscribble 0.15 - 2009-01-04
